Improve font matching with FontConfig and FreeType https://bugs.webkit.org/show_bug.cgi?id=174374

Reviewed by Michael Catanzaro.

* platform/graphics/freetype/FontCacheFreeType.cpp:
(WebCore::FontCache::createFontPlatformData): Loop through all family name matches from FcFontMatch.


Canonical link: https://commits.webkit.org/191254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219418 268f45cc-cd09-0410-ab3c-d52691b4dbfc